style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a {
  text-decoration: none;
  color: inherit;
}

:root {
  font-size: 62.5%;
}

html {
  width: 100%;
}

body {
  font-size: 1.6rem;
  font-family:
    Roboto,
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Oxygen,
    Ubuntu,
    Cantarell,
    'Open Sans',
    'Helvetica Neue',
    sans-serif;
  width: 100%;
}

/* HEADER STYLES */

#header_container {
  width: 100%;
  background-color: #1f2937;
  display: flex;
  justify-content: center;
  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.5);
  position: sticky;
  top: 0;
  left: 0;
}

#header {
  display: flex;
  height: 7.5rem;
  width: clamp(50rem, 80%, 120rem);
  padding: 1rem 5rem;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
  color: #f9faf8;
  font-size: 1.8rem;
}

#header > a {
  height: 100%;
  width: fit-content;
  display: flex;
  align-items: center;
  color: #f9faf8;
  font-weight: normal;
  text-decoration: none;
}

#main_content_dropdown {
  height: 100%;
  width: 8rem;
  display: flex;
  align-items: center;
  position: relative;
}

@keyframes dropdownimation {
  0% {
    scale: 0;
  }

  100% {
    scale: 1;
  }
}

@keyframes dropdownimationReverse {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(0);
  }
}

.header_dropdown_options.animate-in {
  animation: dropdownimation 0.15s ease-out forwards;
}

.header_dropdown_options.animate-out {
  animation: dropdownimationReverse 0.15s ease-out forwards;
}

.header_dropdown_options {
  display: none;
  flex-direction: column;
  position: absolute;
  padding: 1rem;
  top: 4.5rem;
  gap: 1rem;
  align-items: center;
  justify-content: center;
  background-color: #60718c39;
  color: #e5e7eb;
  border-radius: 0.5rem;
  font-size: 1.8rem;
  font-weight: bold;
  animation: dropdownimation 0.15s ease-out;
}

#header a:hover,
a:visited {
  color: inherit;
  text-decoration: inherit;
}

#logo_link {
  padding: 0;
}

#logo_text {
  display: inline;
  margin-right: auto;
  font-size: 4.8rem;
  letter-spacing: -0.5rem;
  & a {
    text-decoration: none;
    color: #f9faf8;
  }
}

#glutaLogo {
  width: auto;
  height: 100%;

  align-self: flex-start;
}

/* ABOUT SECTION STYLES */

section {
  width: 100%;
}

#about {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #222d3d;
  padding: 5rem;
  height: min(60rem, 25%);
}

#about_container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 3rem;
  width: clamp(50rem, 80%, 120rem);
  height: 100%;
}

.about_text {
  display: flex;
  flex-direction: column;
  width: clamp(30rem, 50%, 100rem);
}

.about_text h1 {
  font-size: 4.8rem;
  font-weight: 1000;
  color: #f9faf8;
}

.about_text p {
  font-size: 1.8rem;
  color: #e5e7eb;
}

#about_sign_up {
  background-color: #3882f6;
  color: #f9faf8;
  text-decoration: none;
  border-radius: 1rem;
  width: fit-content;
  height: fit-content;
  padding: 0.7rem 1.6rem;
}

#about_sign_up a:hover,
a:visited {
  color: inherit;
  text-decoration: inherit;
}

#about_slider_container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 3rem;
  width: clamp(30rem, 50%, 100rem);
}

#slider_frame {
  height: clamp(30rem, 50%, 100rem);
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  width: 100%;
}

#slider_container {
  height: 95%;
  padding: 0 50%;
  overflow-x: auto;
  overflow-y: hidden;
  display: flex;
  align-items: center;
  gap: 3rem;
  width: fit-content;
  background-color: #505f762f;
  border-radius: 2rem;
  box-shadow: inset 0 0 0.5rem 0.5rem #222d3d;
  scroll-behavior: smooth;
  &::-webkit-scrollbar {
    display: none;
  }
}

.centered {
  position: relative;
  box-shadow: 1px 1px 1.5rem 0.3rem #1d1f21;
  z-index: 3;
  transform: scale(1.1) opacity(1);
  transition:
    opacity 0.7s ease,
    scale 0.7s ease;
}

#slider_container > img:not(.centered) {
  position: relative;
  scale: 0.7;
  opacity: 0.5;
  transition:
    opacity 0.7s ease,
    scale 0.7s ease;
}

.main_section_glutas {
  width: auto;
  height: 25rem;
  border-radius: 2rem;
}

#slider_dots_container {
  display: flex;
}

.slider_dots {
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 50%;
  border: 1px solid #e5e7eb;
  background-color: transparent;
  margin: 0 0.5rem;
  cursor: pointer;
}

.selected_dot {
  background-color: #e5e7eb;
}

#back_button {
  margin-right: 1rem;
  left: -3.7rem;
}
#forward_button {
  margin-left: 1rem;
  right: -3.7rem;
}

.slider_buttons {
  background-color: #e5e7eb;
  color: #3882f6;
  font-weight: bold;
  font-size: 2.1rem;
  border: none;
  cursor: pointer;
  width: 3rem;
  height: 3rem;
  box-shadow: 1px 1px 1.5rem #000;
  border-radius: 50%;
  position: absolute;
  z-index: 1;
  transition: transform 0.3s ease;
  &:active {
    transform: scale(0.8);
  }
}

/* MAIN CONTENT STYLES */

#main_content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  gap: 3rem;
}

#history {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 4rem;
  padding: 7rem 3rem 0 3rem;
  width: min(100%, 120rem);
}

.history h2 {
  font-size: 3.6rem;
  color: #1f2937;
}

.history_images {
  display: flex;
  flex-direction: row;
  gap: 6rem;
  padding: 0 6rem;
  & p {
    font-size: max(2.4rem, 25%);
  }
}

.history_images_pairs {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
  text-align: center;
  width: 100%;
  height: 100%;
}

.history_images img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border: 0.5rem solid #3882f6;
  border-radius: 1rem;
}

/* QUOTE STYLES */

#quote {
  background-color: #e5e7eb;
  font-size: 3.6rem;
  font-style: italic;
  color: #1f2937;
  padding: 7rem 15rem;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;

  & p {
    width: min(100%, 120rem);
  }
}

.quote_author {
  text-align: right;
  font-weight: bold;
  font-style: normal;
  font-size: 2.4rem;
  color: #1f2937;
}

/* SIGN UP STYLES */

#sign_up {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 3rem;

  padding: 7rem 4.5rem;
  justify-content: space-evenly;
  color: #f9faf8;
}

.sign_up_text {
  display: flex;
  flex-direction: column;
  gap: 0.2rem;
  max-width: 60%;
}

.sign_up_text h3 {
  font-size: 2.8rem;
  font-weight: bold;
  margin: 0;
}

.sign_up_text p {
  font-size: 1.8rem;
  font-weight: normal;
  margin: 0;
}

.sign_up_blue_box {
  background-color: #3882f6;
  border-radius: 1rem;
  width: min(100%, 85rem);
  height: 100%;
  padding: 3rem 5rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 3rem;
}

#sign_up_button {
  background-color: inherit;
  border-radius: 1rem;
  border: 0.3rem solid #f9faf8;
  width: fit-content;
  height: fit-content;
  padding: 0.7rem 3rem;
  color: inherit;
  font-size: 1.6rem;
  font-weight: bold;
  cursor: pointer;
}

/* FOOTER STYLES */

footer {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: auto;
  font-size: 1.6rem;
  color: #e5e7eb;
  background-color: #222d3d;
  width: 100%;
  height: 10rem;
  letter-spacing: 0.123rem;
}

